--- a/index.html
+++ b/index.html
@@ -19,45 +19,41 @@
     const searchInput = document.querySelector('input');
     const searchBtn = document.querySelector('.submit');
 
-    fetch('https://api.giphy.com/v1/gifs/translate?api_key=pdUlKpuiztW1e8pVQxRMeruDCDhjvHYk&s=cats', {mode: 'cors'})
-    .then(function(response) { 
-      return response.json();
-    })
-    .then(function(response) {
-      img.src = response.data.images.original.url;
-    });
+    async function getCats() {
+      try {
+        const response = await fetch('https://api.giphy.com/v1/gifs/translate?api_key=pdUlKpuiztW1e8pVQxRMeruDCDhjvHYk&s=cats', {mode: 'cors'})
+        const catData = await response.json();
+        img.src = catData.data.images.original.url;
+      } catch (error) {
+        alert(error);
+        img.src = "background.png";
+      }
+      
+    }
+    getCats();
+
+    async function getGif() {
+      try {
+        const response = await fetch(`https://api.giphy.com/v1/gifs/translate?api_key=pdUlKpuiztW1e8pVQxRMeruDCDhjvHYk&s=${searchInput.value}`, {mode: 'cors'})
+        const imageData = await response.json();
+        img.src = imageData.data.images.original.url;
+      } catch (error) {
+        alert(error);
+        img.src = "background.png";
+      }
+      
+    }
 
     button.addEventListener('click', () => {
       if (searchInput.value !== "") {
-        fetch(`https://api.giphy.com/v1/gifs/translate?api_key=pdUlKpuiztW1e8pVQxRMeruDCDhjvHYk&s=${searchInput.value}`, {mode: 'cors'})
-        .then(function(response) {
-          return response.json();
-        })
-        .then(function(response) {
-          img.src = response.data.images.original.url;
-        });
+        getGif();
       } else {
-        fetch('https://api.giphy.com/v1/gifs/translate?api_key=pdUlKpuiztW1e8pVQxRMeruDCDhjvHYk&s=cats', {mode: 'cors'})
-        .then(function(response) { 
-          return response.json();
-        })
-        .then(function(response) {
-          img.src = response.data.images.original.url;
-        });
+        getCats();
       }
     });
 
     searchBtn.addEventListener('click', () => {
-      fetch(`https://api.giphy.com/v1/gifs/translate?api_key=pdUlKpuiztW1e8pVQxRMeruDCDhjvHYk&s=${searchInput.value}`, {mode: 'cors'})
-      .then(function(response) { 
-        return response.json();
-      })  
-      .then(function(response) {
-        img.src = response.data.images.original.url;
-      })
-      .catch((error) => {
-        alert("Please enter a valid search term");
-      });
+      getGif();
     })
   </script>
 </body>
